name:                c3r
version:             0.1.0
synopsis:            :3
description:         :3
homepage:            https://github.com/Fylwind/c3r
license:             MIT
license-file:        LICENSE
author:              Fylwind
maintainer:          fyl@wolfpa.ws
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable c3r
  main-is:             Main.hs
  other-modules:       Common
                       Keys
                       Twitter
                       Calico.Base
                       Calico.IO
                       Calico.IOControl
                       Calico.MonadIO
                       Calico.MonadIOControl
                       Calico.ByteString
                       Calico.ByteString.IO
                       Calico.ByteString.MonadIO
                       Calico.Text
                       Calico.Text.IO
                       Calico.Text.MonadIO
  hs-source-dirs:      . calico
  other-extensions:    ConstraintKinds
                       FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
  build-depends:       base >=4.4 && <5
                     , authenticate-oauth
                     , bytestring
                     , conduit
                     , data-default
                     , directory
                     , filepath
                     , http-conduit
                     , lens
                     , lifted-base
                     , monad-control
                     , mtl
                     , parsec
                     , random
                     , resourcet
                     , text
                     , transformers
                     , twitter-conduit
                     , twitter-types-lens
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-name-shadowing
