name:                c3r
version:             0.1.0
synopsis:            :3
description:         :3
homepage:            https://github.com/Fylwind/c3r
license:             MIT
license-file:        LICENSE
author:              Fylwind
maintainer:          fyl@wolfpa.ws
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable c3r
  main-is:             Main.hs
  other-modules:       Common
                       Database
                       Diff
                       Keys
                       Twitter
  other-extensions:    ConstraintKinds
                       FlexibleContexts
                       FlexibleInstances
                       OverloadedStrings
  build-depends:       base >=4.4 && <5
                     , aeson
                     , aeson-pretty
                     , authenticate-oauth
                     , bytestring
                     , calico
                     , conduit
                     , containers
                     , data-default
                     , directory
                     , exceptions
                     , hashable
                     , html-entities
                     , http-types
                     , http-conduit
                     , lens
                     , lens-aeson
                     , lifted-base
                     , monad-control
                     , mtl
                     , parsec
                     , process
                     , random
                     , resourcet
                     , sqlite
                     , text
                     , time
                     , transformers
                     , twitter-conduit
                     , twitter-types-lens
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
